# paper-reference-graph

./: .dockerignore  .gitignore  Makefile  README.md  bun.lockb  city_coordinates.json  package.json  spark_copy (1).ipynb
Data Visualize/: visualize.py
Data processing/: graph.gexf  spark_copy.ipynb
config/: amqp.ts  types.ts
services/api/: bun.lockb  package.json  tsconfig.json
services/api/src/: index.ts  search.ts
services/api/src/cache/: config.ts
services/api/src/queue/: index.ts
services/db-worker/: main.py  pyproject.toml
services/graph-generator/: 85190388184-3.csv  85190388184-3.gexf  graph.py  main.py  pyproject.toml  red.py
services/graph-generator/cache/: 85047881197-1.gexf  85047881197-2.gexf  85047881197-3.gexf  85047881197-5.gexf  85190527557-2.gexf  85190527557-4.gexf
services/paper-query/: README.md  bun.lockb  index copy.ts  index.ts  package.json  sandbox copy.ts  sandbox.ts  tsconfig.json
services/paper-query/lib/: queue.ts  scopus.ts  scoupusapi.ts  types.ts
services/web/: awdwad.csv  city_coordinates.json  get_coordinates.py  main.py
